Add 4차 Study 논의 주제 답변 추가

--- a/SuJeong/4차 논의 주제.md
+++ b/SuJeong/4차 논의 주제.md
@@ -25,11 +25,22 @@
 
 
 다른 사람 질문에 대한 답변 
-레거시 코드 경험 : 비트코인이나 이더리움등과 같은 코인 거래에 대한 정산 역할을 맡은 적이 있는데 그 당시에 코인 API 를 사용하여 지갑에 있는 
+1. 레거시 코드 경험 : 비트코인이나 이더리움등과 같은 코인 거래에 대한 정산 역할을 맡은 적이 있는데 그 당시에 코인 API 를 사용하여 지갑에 있는 
 코인 변경 내역을 가져와서 정산에 반영해 줘야 하는 경우 
 Dto 를 생성하여 클래스로 response 값을 모두 채워주었고 나중에 정산에 오류가 나서 보니 Dto 값이
 클래스는 변하지 않았는데(코드자체) API 주는 값의 필드가 변해서 오류가 난 적이 있었다.(스키마 변경 호환성이 깨짐) 따라서 map 컬렉션으로 바꿨고 필드값이 추가되도 
 그때 호환성 확장성 측면에서 필드를 고려하는것이 중요하다는 생각을 했다. 
+
+
+2. api 응답으로 Base64를 사용해 텍스트로 부호화하고, Base64로 부호화했기 때문에 해석해야 한다는 것 표시한 적 있는지.
+
+
+우선 시스템을 개발할때에 따라서 다를 것 같은데 어느범위까지 개발을 컨트롤 하느냐에 따라 달라질 것 같다. 
+시스템을 개발한다는 것은 call 과 처리 및 응답 모두 개발을 함께 진행하는 경험이 더욱 많을 것이라고 생각해서
+예를들어 사진을 DB 에 직접 바이너리 코드 변환후 저장한다고 했을때 그 값을 upload 하는 사용자가 있을 수 있고 -> 이것을 백서버에 넘겨주는 프론트에
+요청사항으로 multipart로 파일을 넘겨달라고 한 후 백엔드에서는 그것에 맞춰서 Base64로 부호화 후 -> DB 에 저장한다. -> 그리고 이 저장한 것을
+부호화가 되어 있다는 것을 알고 그것에 맞춰서 나머지를 개발하는 경우가 많다고 생각한다.  
+시스템에서 이렇게 양방향을 모두 다 개발컨트롤을 할 수 없는 경우 Base64를 복호화해서 제공하거나 또는 API 요청 문서에 기입하는 등의 노력을 할 것이다. 
 
 
 
